fix: update database URL in application-dev.properties to use underscore in database name

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 # Spring DataSource Configuration
 
 # Cambiar según la base de datos que vaya a utilizarse
-spring.datasource.url=jdbc:mysql://localhost:3306/safework-db?useSSL=true&serverTimezone=UTC&createDatabaseIfNotExist=true&publicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/safework_db?useSSL=true&serverTimezone=UTC&createDatabaseIfNotExist=true&publicKeyRetrieval=true
 
 # Cambiar según la configuración local de la base de datos
 spring.datasource.username=root
