--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # To change later:
-#spring.jpa.hibernate.naming.physical-strategy=com.acme.center.platform.shared.infrastructure.persistence.jpa.configuration.strategy.SnakeCaseWithPluralizedTablePhysicalNamingStrategy
+spring.jpa.hibernate.naming.physical-strategy=com.nexorape.safework.service.shared.infrastructure.persistence.jpa.configuration.strategy.SnakeCaseWithPluralizedTablePhysicalNamingStrategy
 
 # Application Information for Documentation
 
