feat: update application properties for JPA configuration and database credentials

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,3 +2,6 @@
 spring.datasource.url=
 spring.datasource.username=dev
 spring.datasource.password=${LCPASSWORD}
+
+# Spring Data JPA Configuration
+spring.jpa.show-sql=false
