--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,15 +7,10 @@ spring.profiles.active=dev
 # Spring DataSource Configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Spring Data JPA Configuration
-spring.jpa.show-sql=true
-
 #Spring Data JPA Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-# To change later:
 spring.jpa.hibernate.naming.physical-strategy=com.nexorape.safework.service.shared.infrastructure.persistence.jpa.configuration.strategy.SnakeCaseWithPluralizedTablePhysicalNamingStrategy
 
 # Application Information for Documentation
@@ -25,7 +20,7 @@ documentation.application.description=@project.description@
 documentation.application.version=@project.version@
 
 # JWT Configuration Properties
-authorization.jwt.secret = WriteHereYourSecretStringForTokenSigningCredentials
+authorization.jwt.secret = deadpool12@2006_elprohibido
 authorization.jwt.expiration.days = 7
 
 # Flyway Configuration
