--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,3 +6,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/safework_db?useSSL=true&server
 # Cambiar según la configuración local de la base de datos
 spring.datasource.username=root
 spring.datasource.password=123456
+
+# Spring Data JPA Configuration
+spring.jpa.show-sql=true
