fix: update JWT secret for enhanced security and to fullfill jwt requirements

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ documentation.application.description=@project.description@
 documentation.application.version=@project.version@
 
 # JWT Configuration Properties
-authorization.jwt.secret = deadpool12@2006_elprohibido
+authorization.jwt.secret = deadpool12@2006_elprohibido_estuvo_aqui_jpg
 authorization.jwt.expiration.days = 7
 
 # Flyway Configuration
