--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,9 @@
 # Spring DataSource Configuration
 
-# Cambiar según la base de datos que vaya a utilizarse
+# Cambiar segun la base de datos que vaya a utilizarse
 spring.datasource.url=jdbc:mysql://localhost:3306/safework_db?useSSL=true&serverTimezone=UTC&createDatabaseIfNotExist=true&publicKeyRetrieval=true
 
-# Cambiar según la configuración local de la base de datos
+# Cambiar segun la configuracion local de la base de datos
 spring.datasource.username=root
 spring.datasource.password=123456
 
