feat(master): add Dockerfile

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,11 +1,11 @@
 # Spring DataSource Configuration
 
 # Cambiar segun la base de datos que vaya a utilizarse
-spring.datasource.url=jdbc:mysql://localhost:3306/safework_db?useSSL=true&serverTimezone=UTC&createDatabaseIfNotExist=true&publicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://172.174.34.199:3306/safework_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 
 # Cambiar segun la configuracion local de la base de datos
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=1234
 
 # Spring Data JPA Configuration
 spring.jpa.show-sql=true
